# TI-ViT

./: .gitignore  pyproject.toml
checkpoints/debug_train/: config.json
checkpoints/pretrain_ego4d_20250305_1/: config.json
checkpoints/pretrain_ego4d_20250306_1/: config.json
checkpoints/pretrain_ego4d_20250307_1/: config.json
checkpoints/pretrain_ego4d_20250308_1/: config.json
checkpoints/pretrain_ego4d_20250308_2/: config.json
checkpoints/pretrain_ego4d_20250309_1/: config.json
checkpoints/pretrain_ego4d_20250310_1/: config.json
checkpoints/pretrain_ego4d_20250313_1/: config.json
scripts/: annot_ego4d.py  convert_mae_to_vit.py  extract_mae_decoder.py  pretrain.py  test_InterHand26M.ipynb
sl_vit2/config/: __init__.py  base.py
sl_vit2/dataset/: COCO2017.py  HInt.py  __init__.py  ego4d.py  rmcache.sh
sl_vit2/dataset/InterHand26M/: InterHand26M.py  __init__.py  aid_human_annot_test.txt  config.py
sl_vit2/dataset/InterHand26M/utils/: dir.py  mano.py.bak  preprocessing.py  transforms.py
sl_vit2/net/: __init__.py  latent_transformers.py  lr_scheduler.py  ti_poser.py  ti_vit.py  transformer_module.py
sl_vit2/utils/: geometry.py  img.py  mano.py  misc.py
tests/: test_COCO2017.py  test_HInt.py  test_InterHand26M.py  test_ego4d.py  test_extracted_vit_ae.py  test_sl_vit2.py  test_ti_poser.py  test_ti_vit.py  test_utils_img.py
